--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,8 +1,6 @@
-name: unit tests
+name: tests
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
     branches: [ master ]
 
@@ -13,18 +11,26 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
     - name: Set up Python 3.9
       uses: actions/setup-python@v2
       with:
         python-version: "3.9"
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install flake8 pytest sphinx sphinx-rtd-theme setuptools wheel
+        pip install -r requirements.txt
+
     - name: Lint with flake8
-      run: |
-        flake8 . --count --show-source --statistics
+      run: flake8 . --count --show-source --statistics
+
     - name: Test with pytest
-      run: |
-        pytest tests/internal
+      run: pytest tests/internal
+
+    - name: Test building pypi package
+      run: python setup.py sdist bdist_wheel
+
+    - name: Test building sphinx docs
+      run: make -C docs html
