--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -7,9 +7,10 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  tests:
 
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
     - uses: actions/checkout@v2
@@ -19,17 +20,22 @@ jobs:
       with:
         python-version: "3.9"
 
+    - name: Make vcan0 bus for unit tests
+      run: |
+        sudo ip link add dev vcan0 type vcan
+        sudo ip link set vcan0 up
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest sphinx sphinx-rtd-theme setuptools wheel
+        pip install flake8 sphinx sphinx-rtd-theme setuptools wheel
         pip install -r requirements.txt
 
     - name: Lint with flake8
       run: flake8 . --count --show-source --statistics
 
-    - name: Test with pytest
-      run: pytest tests/internal
+    - name: Test with Python's unittest
+      run: python -m unittest
 
     - name: Test building pypi package
       run: python setup.py sdist bdist_wheel
