move all package meta data into setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,38 @@
+[metadata]
+name = oresat-linux-node
+version = attr: oresat_linux_node.__version__
+description = Application framework for OreSat Linux boards
+long_description = file: README.md
+long_description_content_type = text/x-md
+url = https://github.com/oresat/oresat-linux-node
+author = PSAS
+author_email = oresat@pdx.edu
+maintainer = PSAS
+maintainer_email = oresat@pdx.edu
+license = GPL-3.0
+license_file = LICENSE
+classifiers =
+    Development Status :: 5 - Production/Stable
+    Intended Audience :: Developers
+    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
+    Operating System :: POSIX :: Linux
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Topic :: Scientific/Engineering
+    Topic :: Software Development :: Embedded Systems
+    Topic :: Software Development :: Libraries :: Application Frameworks
+
+[options]
+packages = find:
+install_requires =
+    canopen
+    psutil
+    loguru
+python_requires = >=3.7
+
 [flake8]
 ignore = E402, __init__.py: F401
 exclude = .git, __pycache__, build, dist
