--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,8 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 sphinx sphinx-rtd-theme setuptools wheel
-        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
 
     - name: Lint with flake8
       run: flake8 . --count --show-source --statistics
