--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
-name = oresat-linux-node
-version = attr: oresat_linux_node.__version__
-description = Application framework for OreSat Linux boards
+name = oresat-app
+version = attr: oresat_app.__version__
+description = Application framework for all OreSat Linux boards
 long_description = file: README.md
 long_description_content_type = text/x-md
 url = https://github.com/oresat/oresat-linux-node
@@ -12,7 +12,7 @@ maintainer_email = oresat@pdx.edu
 license = GPL-3.0
 license_file = LICENSE
 classifiers =
-    Development Status :: 5 - Production/Stable
+    Development Status :: 4 - Beta
     Intended Audience :: Developers
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: POSIX :: Linux
