--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ maintainer_email = oresat@pdx.edu
 license = GPL-3.0
 license_file = LICENSE
 classifiers =
-    Development Status :: 4 - Beta
+    Development Status :: 3 - Alpha
     Intended Audience :: Developers
     License :: OSI Approved :: GNU General Public License v3 (GPLv3)
     Operating System :: POSIX :: Linux
