fix long description type

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = oresat-app
 version = attr: oresat_app.__version__
 description = Application framework for all OreSat Linux boards
 long_description = file: README.md
-long_description_content_type = text/x-md
+long_description_content_type = text/markdown
 url = https://github.com/oresat/oresat-linux-node
 author = PSAS
 author_email = oresat@pdx.edu
