--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
-name = oresat-app
-version = attr: oresat_app.__version__
+name = oresat-linux-app-framework
+version = attr: olaf.__version__
 description = Application framework for all OreSat Linux boards
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/oresat/oresat-linux-app
+url = https://github.com/oresat/oresat-linux-app-framework
 author = PSAS
 author_email = oresat@pdx.edu
 maintainer = PSAS
