rename py package to oresat_olaf and version bump

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = oresat-linux-app-framework
+name = oresat-olaf
 version = attr: olaf.__version__
 description = Application framework for all OreSat Linux boards
 long_description = file: README.md
