add paths-ignore to tests workflow

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -2,9 +2,19 @@ name: tests
 
 on:
   push:
-    branches: [ master ]
+    paths-ignore:
+      - 'README.md'
+      - 'examples/**'
+      - 'scripts/**'
+    branches:
+      - master
   pull_request:
-    branches: [ master ]
+    paths-ignore:
+      - 'README.md'
+      - 'examples/**'
+      - 'scripts/**'
+    branches:
+      - master
 
 jobs:
   tests:
