--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = attr: olaf.__version__
 description = Application framework for all OreSat Linux boards
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/oresat/oresat-linux-app-framework
+url = https://github.com/oresat/oresat-olaf
 author = PSAS
 author_email = oresat@pdx.edu
 maintainer = PSAS
