replace setup.py with pyproject.toml

--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,16 @@ install_requires =
     loguru
 python_requires = >=3.7
 
+[options.package_data]
+olaf = data/*
+
+[options.entry_points]
+console_scripts =
+    olaf-sdo-transfer = olaf.scripts.sdo_transfer:main
+    olaf-file-transfer = olaf.scripts.file_transfer:main
+    olaf-os-command = olaf.scripts.os_command:main
+    olaf-system-info = olaf.scripts.system_info:main
+
 [flake8]
 ignore = E402, __init__.py: F401
 exclude = .git, __pycache__, build, dist
