fix long_description to use rst in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,8 +2,7 @@
 name = oresat-olaf
 version = attr: olaf.__version__
 description = Application framework for all OreSat Linux boards
-long_description = file: README.md
-long_description_content_type = text/markdown
+long_description = file: README.rst
 url = https://github.com/oresat/oresat-olaf
 author = PSAS
 author_email = oresat@pdx.edu
