--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -46,7 +46,7 @@ jobs:
       run: python -m unittest
 
     - name: Test building pypi package
-      run: python setup.py sdist bdist_wheel
+      run: python -m build
 
     - name: Test building sphinx docs
       run: make -C docs html
