add new eds script for generating new app eds files

--- a/setup.cfg
+++ b/setup.cfg
@@ -42,3 +42,4 @@ console_scripts =
     olaf-file-transfer = olaf.scripts.file_transfer:main
     olaf-os-command = olaf.scripts.os_command:main
     olaf-system-info = olaf.scripts.system_info:main
+    olaf-new-eds = olaf.scripts.new_eds:main
