fixes to start order and package data

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,10 @@ install_requires =
 python_requires = >=3.7
 
 [options.package_data]
-olaf = data/*
+olaf =
+    _internals/data/*
+    _internals/rest_api/static/*
+    _internals/rest_api/templates/*
 
 [options.entry_points]
 console_scripts =
