--- a/setup.cfg
+++ b/setup.cfg
@@ -3,13 +3,14 @@ name = oresat-olaf
 version = attr: olaf.__version__
 description = Application framework for all OreSat Linux boards
 long_description = file: README.rst
+long_description_content_type = text/x-rst
 url = https://github.com/oresat/oresat-olaf
 author = PSAS
 author_email = oresat@pdx.edu
 maintainer = PSAS
 maintainer_email = oresat@pdx.edu
 license = GPL-3.0
-license_file = LICENSE
+license_files = LICENSE
 classifiers =
     Development Status :: 3 - Alpha
     Intended Audience :: Developers
