rpdos and sync-based tpdo work now and new SYNC script

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,3 +48,4 @@ console_scripts =
     olaf-os-command = olaf.scripts.os_command:main
     olaf-system-info = olaf.scripts.system_info:main
     olaf-new-eds = olaf.scripts.new_eds:main
+    olaf-sync = olaf.scripts.sync:main
