--- a/setup.cfg
+++ b/setup.cfg
@@ -29,10 +29,11 @@ classifiers =
 packages = find:
 install_requires =
     canopen
-    psutil
+    flask
     loguru
     natsort
-    flask
+    psutil
+    pydbus
 python_requires = >=3.7
 
 [options.package_data]
