adc class can now mock the pin and other minor changes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,4 +45,4 @@ version = {attr = "olaf.__version__"}
 exclude = ["docs*"]
 
 [tool.setuptools.package-data]
-"*" = ["*.eds", "*.html"]
+"*" = ["*.eds", "*.html", "*.ico"]
