add missing dbus dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,10 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Application Frameworks",
 ]
 dependencies = [
+    "PyGObject",
     "canopen",
     "flask",
+    "gi",
     "loguru",
     "natsort",
     "psutil",
