# This is a combination of 11 commits. # This is the 1st commit message:
Add files via upload
# This is the commit message #2:

Delete olaf/bpe directory
# This is the commit message #3:

Add files via upload
# This is the commit message #4:

Delete olaf/bpe_wd directory
# This is the commit message #5:

Delete olaf/bpe/setup.py
# This is the commit message #6:

Delete olaf/bpe/test.py
# This is the commit message #7:

Delete olaf/bpe/CMakeLists.txt
# This is the commit message #8:

Add files via upload
# This is the commit message #9:

Add files via upload
# This is the commit message #10:

Add files via upload
# This is the commit message #11:

Add files via upload

--- a/olaf/bpe/Makefile
+++ b/olaf/bpe/Makefile
@@ -1,7 +1,8 @@
-#Makefile for binding bpe C code to Python
-#The linker flag: -undefined dynamic_lookup  is for pybind11 usage with Mac M1+ OS
+# Makefile for binding bpe C code to Python
+# The linker flagis: -Wl,-ld_classic -undefined dynamic_lookup  
+# are for pybind11 usage with Mac M1+ OS. Please comment out as needed.
 
-#select compiler for C and C++
+# select compiler for C and C++
 #CC = gcc
 #CXX = g++
 
@@ -12,7 +13,7 @@ BPE_SRC = source
 
 LINK_TARGET = bpe.so
 
-CPPFLAGS = \
+INC_DIRS = \
 		   -I$(PYLIB_SRC) \
 		   -I$(BPE_SRC)
 
@@ -40,18 +41,18 @@ BPE_SOURCES = \
 			  $(BPE_SRC)/main_pybind.c 
 
 CFLAGS = \
-		 -g -Wall $(CPPFLAGS) -fPIC \
+		 -g -Wall $(INC_DIRS) -fPIC \
 		 $(shell python3-config --includes --cflags) \
 		 $(shell python3 -m pybind11 --includes)
 
 CXXFLAGS = \
-		 -std=c++11 -g -Wall $(CPPFLAGS) -fPIC \
+		 -std=c++11 -g -Wall $(INC_DIRS) -fPIC \
 		 $(shell python3-config --includes --cflags) \
 		 $(shell python3 -m pybind11 --includes)
 
 LDFLAGS = -lm $(shell python3-config --ldflags) \
-		  -undefined dynamic_lookup \
-		  #$(shell python3 -m pybind11 --includes)
+		  -Wl,-ld_classic -undefined dynamic_lookup
+# The above line is for succesful compilation on Mac M1+ architecture as of: 9/23/23
 
 OBJS = $(PYLIB_SOURCES:%.cpp=$(BUILD_DIR)/%.o) $(BPE_SOURCES:%.c=$(BUILD_DIR)/%.o)
 
@@ -76,4 +77,3 @@ clean:
 
 leak:
 	valgrind ./main --tool=memcheck --leak-check=full
-
