add warning about invalid indexes/subindexes when adding sdo callback

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dynamic = ["version"]
 version = {attr = "olaf.__version__"}
 
 [tool.setuptools.packages.find]
-exclude = ["docs*"]
+exclude = ["docs*", "tests*"]
 
 [tool.setuptools.package-data]
 "*" = ["*.html", "*.ico"]
