--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "loguru",
     "natsort",
     "psutil",
-    "oresat-od-database",
+    "oresat-configs",
 ]
 dynamic = ["version"]
 
