--- a/olaf/bpe/Makefile
+++ b/olaf/bpe/Makefile
@@ -1,10 +1,11 @@
-#Makefile for binding bpe C code to Python
-#The linker flag: -undefined dynamic_lookup  is for pybind11 usage with Mac M1+ OS
+# Makefile for binding bpe C code program to Python
+# The linker flags: -Wl,-ld_classic -undefined dynamic_lookup  
+# 	are for pybind11 usage with Mac M1+ OS. Please comment out as needed.
+# There are also CXX flags to ignore certain warnings stemming from the source
+# 	code that may be commented out.
 
-#select compiler for C and C++
-#CC = gcc
-#CXX = g++
-
+# select compiler for C and C++
+CXX = g++
 
 PYLIB_SRC = .
 
@@ -12,13 +13,14 @@ BPE_SRC = source
 
 LINK_TARGET = bpe.so
 
-CPPFLAGS = \
+INC_DIRS = \
 		   -I$(PYLIB_SRC) \
 		   -I$(BPE_SRC)
 
 BUILD_DIR = build
 
-PYLIB_SOURCES = $(PYLIB_SRC)/bpe.cpp
+PYLIB_SOURCES = $(PYLIB_SRC)/bpe.cpp \
+				$(PYLIB_SRC)/main_pybind.cpp
 
 BPE_SOURCES = \
 			  $(BPE_SRC)/AC_BitPlaneCoding.c \
@@ -37,21 +39,18 @@ BPE_SOURCES = \
 			  $(BPE_SRC)/ricecoding.c \
 			  $(BPE_SRC)/PatternCoding.c \
 			  $(BPE_SRC)/waveletbpe.c \
-			  $(BPE_SRC)/main_pybind.c 
-
-CFLAGS = \
-		 -g -Wall $(CPPFLAGS) -fPIC \
-		 $(shell python3-config --includes --cflags) \
-		 $(shell python3 -m pybind11 --includes)
 
 CXXFLAGS = \
-		 -std=c++11 -g -Wall $(CPPFLAGS) -fPIC \
-		 $(shell python3-config --includes --cflags) \
-		 $(shell python3 -m pybind11 --includes)
+		   -std=c++11 -g -Wall $(INC_DIRS) -fPIC \
+		   $(shell python3-config --includes --cflags) \
+		   $(shell python3 -m pybind11 --includes) \
+		   -Wno-deprecated -Wno-unused-but-set-variable \
+		   -Wno-unused-parameter -Wno-sign-compare
+# above -Wno flags are to ignore certain warnings during testing
 
-LDFLAGS = -lm $(shell python3-config --ldflags) \
-		  -undefined dynamic_lookup \
-		  #$(shell python3 -m pybind11 --includes)
+LDFLAGS = -lm $(shell python3-config --ldflags)
+#-Wl,-ld_classic -undefined dynamic_lookup
+# above line is for succesful compilation on Mac M1+ architecture as of: 9/23/23
 
 OBJS = $(PYLIB_SOURCES:%.cpp=$(BUILD_DIR)/%.o) $(BPE_SOURCES:%.c=$(BUILD_DIR)/%.o)
 
@@ -59,10 +58,10 @@ OBJS = $(PYLIB_SOURCES:%.cpp=$(BUILD_DIR)/%.o) $(BPE_SOURCES:%.c=$(BUILD_DIR)/%.
 
 $(BUILD_DIR)/%.o: %.c
 	@mkdir -p $(BUILD_DIR)/$(BPE_SRC)
-	$(CC) -c $< -o $@ $(CFLAGS)
+	$(CXX) -c $< -o $@ $(CXXFLAGS)
 
 $(BUILD_DIR)/%.o: %.cpp
-	@mkdir -p $(BUILD_DIR)
+	@mkdir -p $(BUILD_DIR)/$(BPE_SRC)
 	$(CXX) -c $< -o $@ $(CXXFLAGS)
 
 $(LINK_TARGET): $(OBJS)
@@ -73,7 +72,3 @@ all: $(LINK_TARGET)
 
 clean:
 	rm -rf $(BUILD_DIR) $(LINK_TARGET)
-
-leak:
-	valgrind ./main --tool=memcheck --leak-check=full
-
