cleanup of docs
pages that were remove are now in the oresat-software-docs repo

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+black
 build
 canopen
 flask
+isort
 loguru
 natsort
 oresat-configs
 psutil
+pylama[all]
+pylama[toml]
 setuptools
 sphinx
 sphinx-rtd-theme
+sphinxcontrib-mermaid
 wheel
