raised min python-can version to 4.3.0 to reduce import time

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "loguru",
     "natsort",
     "psutil",
+    "python-can>=4.3.0",
     "oresat-configs",
 ]
 dynamic = ["version"]
