fix linting errors

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,8 @@ linters = "pycodestyle,pyflakes,pylint,mccabe,mypy,radon"
 # W0102:    Dangerous default value as argument
 # W0107:    Unnecessary pass statement
 # R0903:    Too few public methods
-ignore = "E402,C901,C0103,E203,R0912,R0915,R901,R901,R0914,C0413,C0206,R1716,W1514,R0902,R0913,W0707,W0102,W0107,R0903"
+# R0904:    Too many public methods
+ignore = "E402,C901,C0103,E203,R0912,R0915,R901,R901,R0914,C0413,C0206,R1716,W1514,R0902,R0913,W0707,W0102,W0107,R0903,R0904"
 max_line_length = 100
 
 [[tool.pylama.files]]
@@ -82,7 +83,7 @@ path = "*/_version.py"
 ignore = "C0114"
 
 [[tool.mypy.overrides]]
-module = "canopen,oresat_configs,psutil"
+module = "canopen,oresat_configs,psutil,canopen.sdo,canopen.sdo.exceptions,canopen.objectdictionary"
 ignore_missing_imports = true
 
 [tool.isort]
