--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -10,35 +10,16 @@ on:
 
 jobs:
   tests:
-
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
     steps:
-    - name: Clone oresat-c3 repository
-      uses: actions/checkout@v2
-
-    - name: Clone oresat-configs repository
-      uses: actions/checkout@v2
-      with:
-        repository: oresat/oresat-configs
-        path: resources/oresat-configs
+    - uses: actions/checkout@v4
 
     - name: Set up Python 3.9
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v5
       with:
         python-version: "3.9"
-
-    - name: Build and install oresat-configs
-      working-directory: resources/oresat-configs
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        python -m build
-        pip install dist/*.whl
-
-    - name: Clean up oresat-configs
-      run: rm -rf resources/oresat-configs
 
     - name: Install dependencies
       run: |
