--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,12 +14,30 @@ jobs:
     timeout-minutes: 10
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Clone this repository
+      uses: actions/checkout@v4
+
+    - name: Clone oresat-configs repository
+      uses: actions/checkout@v4
+      with:
+        repository: oresat/oresat-configs
+        path: resources/oresat-configs
 
     - name: Set up Python 3.9
       uses: actions/setup-python@v5
       with:
         python-version: "3.9"
+
+    - name: Build and install oresat-configs
+      working-directory: resources/oresat-configs
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+        python -m build
+        pip install dist/*.whl
+
+    - name: Clean up oresat-configs
+      run: rm -rf resources/oresat-configs
 
     - name: Install dependencies
       run: |
